<resources>
    <string name="app_name">Trivia</string>
    <string name="textViewTop">Trivia</string>
    <string name="true_text">True</string>
    <string name="false_text">False</string>
    <string name="next_button">next button</string>
    <string name="previous_button">previous button</string>
    <string name="counter_questions">0 out of 100</string>
    <string name="correct">Correct!</string>
    <string name="incorrect">Incorrect</string>
    <string name="inititalScore">Score: 0</string>
</resources>
