<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/textView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/trivia_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="116dp"
        android:fontFamily="@font/luckiest_guy"
        android:text="@string/textViewTop"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="390dp"
        android:layout_height="178dp"
        android:layout_marginTop="75dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="7dp"
        app:contentPadding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trivia_textView" >

        <TextView
            android:id="@+id/question_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="hellothere"
            android:layout_gravity="center_vertical"
            android:textSize="18sp" />
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/true_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="144dp"
        android:background="@color/colorAccent"
        android:contentDescription="@string/next_button"
        android:fontFamily="@font/luckiest_guy"
        android:text="@string/true_text"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/next_button"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <Button
        android:id="@+id/false_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="104dp"
        android:background="@color/colorAccent"
        android:contentDescription="@string/previous_button"
        android:fontFamily="@font/luckiest_guy"
        android:text="@string/false_text"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <ImageButton
        android:id="@+id/previous_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@color/colorAccent"
        app:layout_constraintEnd_toStartOf="@+id/true_button"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:srcCompat="@android:drawable/ic_media_previous" />

    <ImageButton
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toEndOf="@+id/false_button"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:srcCompat="@android:drawable/ic_media_next" />

    <TextView
        android:id="@+id/counter_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/luckiest_guy"
        android:text="@string/counter_questions"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trivia_textView"
        app:layout_constraintVertical_bias="0.611" />

    <TextView
        android:id="@+id/score_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/luckiest_guy"
        android:text="TextView"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trivia_textView"
        app:layout_constraintVertical_bias="0.611" />

    <TextView
        android:id="@+id/highestScore_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/luckiest_guy"
        android:text="TextView"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/score_TextView"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>